# fileforge

./: .gitignore  Cargo.toml  Readme.md  fileforge.config.json.example  install.ps1  install.sh
dotnet-template/: .gitlab-ci.yml  Dockerfile  compose.yaml
dotnet-template/ansible/: ansible-deploy.yml  hosts.yml
src/: constants.rs  main.rs
src/angular_generator/: generate_ansible_files_for_angular.rs  generate_compose_file_for_angular.rs  generate_dockerfile_for_angular.rs  generate_gitlab_ci_file_for_angular.rs  generate_nginx_file_for_angular.rs  handle_angular_generation.rs  mod.rs
src/config/: angular_config.rs  config.rs  dotnet_config.rs  handle_config_generation.rs  mod.rs
src/dotnet_generator/: dotnet_generator.rs  generate_ansible_files.rs  generate_ansible_files_for_dotnet.rs  generate_compose_file.rs  generate_compose_file_for_dotnet.rs  generate_dockerfile.rs  generate_dockerfile_for_dotnet.rs  generate_gitlab_cil_file.rs  generate_gitlab_cil_file_for_dotnet.rs  handle_dotnet_generation.rs  mod.rs
src/others/: generate_everything.rs  mod.rs  print_usage.rs  show_config.rs
src/shared/: check_git_status.rs  directory_helper.rs  get_current_config.rs  mod.rs  shared_input_helper.rs
