[package]
name = "fileforge"
version = "0.4.3"
edition = "2021"
authors = ["Pranta Dutta"]
description = "Code Generation Tool for File I/O in Rust"
homepage = "https://github.com/theprantadutta/fileforge"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"